2007-06-15  Pete Gustafson  <petegus@umich.edu>

        * plot/__go_draw_axes__.m  Handle rotation arg for axis labels.
        * plot/__axis_label__.m  Assign ylabel default rotation property
	to 90, all others 0.

        * plot/__errplot__.m: Set ifmt from fmt.linestyle.
        * plot/__go_draw_axes__.m: Removed undefined tx from call to
	get_data_limits.
        * plot/__plotopt1__.m: Intercept and strip format string when
	called by __errplot__.

2007-06-15  John W. Eaton  <jwe@octave.org>

	* testfun/test.m: Also return number of expected failures.

2007-06-14  John W. Eaton  <jwe@octave.org>

	* set/ismember.m: Mark two tests known to fail with xtest.

	* plot/__go_draw_axes__.m: Handle text rotation property.

2007-06-14  Paul Kienzle  <pkienzle@users.sf.net>

	* testfun/test.m: Add xtest support for tests known to fail.

2007-06-14  Sebastian Schubert  <sebastian-schubert@gmx.de>

	* plot/print.m: Handle pstex, pslatex, epslatex, and
	epslatexstandalone terminals.

2007-06-14  David Bateman  <dbateman@free.fr>

	* general/__splinen__.m: Check also for ND vectors. Fix for N > 2,
	as permutation of results was incorrect.
	* general/interp1.m: Add demo on second derivative
	* general/interpn.m: Convert "y" to vectors for __splinen__
	call. Add 3D demo. Fix typos
	* general/interp3.m: Fix typos. Correct permutation for use of
	interpn.
	* polynomial/mkpp.m: Correction for matrices of 3 or more dimensions.

2007-06-13  John W. Eaton  <jwe@octave.org>

	* miscellaneous/mkoctfile.m: Quote args too.

2007-06-13  Michael Goffioul  <michael.goffioul@swing.be>

	* miscellaneous/mkoctfile.m: Quote script name for call to system.

2007-06-12  Michael Goffioul  <michael.goffioul@swing.be>

	* plot/__pltopt1__.m: Set linestyle to "none" instead of "".
	Set have_linestyle to true if two character linestyle is found.

2007-06-12  David Bateman  <dbateman@free.fr>

	* general/Makefile.in (SOURCES): Include __spline__.m, interp3.m
	and interpn.m.
